[fix] add docs for auth
